<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications"
            android:defaultValue="true"/>

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:title="@string/pref_title_ringtone"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound"/>

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate"
            android:defaultValue="true"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
     dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
            android:dependency="notifications_new_message"
            android:key="notification_time"
            android:title="@string/pref_title_notification_time"
            android:entries="@array/pref_notification_time_titles"
            android:entryValues="@array/pref_notification_time_values"
            android:defaultValue="1800000"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

</PreferenceScreen>
