<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:id="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/event_fragment_location_text_view"
            app:layout_constraintEnd_toStartOf="@+id/event_fragment_location_text_view">

        <TextView
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/event_fragment_date_and_time_text_view"
                android:text="@string/event_detail_date_and_time"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/event_fragment_location_text_view"
                android:layout_marginBottom="9dp"
                app:layout_constraintBottom_toTopOf="@+id/event_fragment_date_text_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/event_detail_location"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/event_fragment_location_text_view"
                app:layout_constraintStart_toEndOf="@+id/event_fragment_date_and_time_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:id="@+id/event_fragment_date_text_view"
                app:layout_constraintTop_toBottomOf="@+id/event_fragment_date_and_time_text_view"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/event_fragment_time_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/event_fragment_address_text_view1"
                android:layout_marginEnd="1dp"/>

        <TextView
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:id="@+id/event_fragment_time_text_view"
                app:layout_constraintTop_toBottomOf="@+id/event_fragment_date_text_view"
                app:layout_constraintBottom_toTopOf="@+id/notify_me_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/event_fragment_address_text_view2"/>

        <Button
                android:text="@string/event_detail_notify_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/notify_me_button"
                app:layout_constraintTop_toBottomOf="@+id/event_fragment_time_text_view"
                app:layout_constraintEnd_toStartOf="@+id/get_directions_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="notifyEventButton_OnClick"/>

        <Button
                android:text="@string/event_detail_get_directions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/get_directions_button"
                app:layout_constraintStart_toEndOf="@+id/notify_me_button"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/notify_me_button"
                android:onClick="getDirectionsButton_OnClick"/>

        <TextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:id="@+id/event_fragment_address_text_view1"
                android:layout_marginTop="9dp"
                app:layout_constraintTop_toBottomOf="@+id/event_fragment_location_text_view"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/event_fragment_address_text_view2"
                app:layout_constraintStart_toEndOf="@+id/event_fragment_date_text_view"
                android:layout_marginStart="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:id="@+id/event_fragment_address_text_view2"
                android:layout_marginTop="13dp"
                app:layout_constraintTop_toBottomOf="@+id/event_fragment_address_text_view1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/event_fragment_time_text_view"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
            android:id="@+id/event_fragment_description_label_text_view"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/event_detail_description"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_fragment_description_text_view"/>

</LinearLayout>